--- a/Spark HTML/index-1.html
+++ b/Spark HTML/index-1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Spark - Responsive Hosting, Domain, Technology HTML Template</title>
+    <title>AIT Solutions</title>
 
     <!-- main css file -->
     <link rel="stylesheet" href="css/custom/style.css">
@@ -96,14 +96,9 @@
    										</li>
     								</ul>
     							</li>
-    							<li><a href="support.html">Support</a></li>
-    							<li><a href="#">Blog</a>
-									<ul class="sub-menu">
-    									<li><a href="blog.html">Blog</a></li>
-    									<li><a href="single-blog.html">single blog</a></li>
-									</ul>
-    							</li>
-    							<li><a href="contact.html">Contact</a></li>
+    							<li><a href="support.html">Soporte Técnico</a></li>
+    							<li><a href="#">Diseño Web</a></li>
+    							<li><a href="contact.html">Contacto</a></li>
     						</ul>
     					</nav>
     				</div>
