--- a/Spark HTML/index-1.html
+++ b/Spark HTML/index-1.html
@@ -11,7 +11,7 @@
 	<!-- responsive css file -->
     <link rel="stylesheet" href="css/responsive/responsive.css">
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="icon" type="image/png" href="img/android-icon-192x192.png">
 
 
     <!--[if lt IE 9]>
@@ -110,7 +110,7 @@
     <!-- ======= /1.01 Header Area ====== -->
 
     <!-- ======= 1.02 Home Area ====== -->
-    <div class="homeArea animated">
+    <div class="homeArea animated" style="background-color: lightslategrey">
     	<div class="container">
     		<div class="row">
     			<div class="col-md-5">
