--- a/Spark HTML/about.html
+++ b/Spark HTML/about.html
@@ -160,6 +160,7 @@
     		</div>
     	</div>
     	<div class="aboutImg">
+    	<!--pOMER IMAGEN DEL GRUPO-->
     		<img src="img/about01.jpg" alt="">
     	</div>
     </div>
