--- a/Spark HTML/index-1.html
+++ b/Spark HTML/index-1.html
@@ -98,7 +98,7 @@
     							</li>
     							<li><a href="support.html">Soporte Técnico</a></li>
     							<li><a href="#">Diseño Web</a></li>
-    							<li><a href="">Nosotros</a></li>
+    							<li><a href="about.html">Nosotros</a></li>
     							<li><a href="contact.html">Contacto</a></li>
     						</ul>
     					</nav>
@@ -110,17 +110,16 @@
     <!-- ======= /1.01 Header Area ====== -->
 
     <!-- ======= 1.02 Home Area ====== -->
-    <div class="homeArea animated" style="background-color: lightslategrey">
+    <div class="homeArea animated" style="background-color: black">
     	<div class="container">
     		<div class="row">
     			<div class="col-md-5">
     				<div class="homeContent">
-    					<span class="topTxt">Simple &nbsp; - &nbsp; Intuitivo &nbsp; - &nbsp; Rápido</span>
-    					<span class="h2 homeTitle">Best web hosting service for your website.</span>
-    					<p>Get the best speed for your website. Don’t lose anymore <br>clients for the slowest speed of your hosting service.</p>
+    					
+    					<span class="h2 homeTitle">Consultoria de gran nivel.</span>
+    					<p>Contamos con profesionales capacidos para poder, <br>resolver sus problema en el àbito que se requiera..</p>
     					<div class="homeBtn">
-    						<a href="#" class="btnOne Btn"><i class="icofont icofont-rocket-alt-2"></i>Get Started Now</a>
-    						<a href="#" class="btnTwo Btn">check pricing</a>
+    						<a href="#" class="btnOne Btn">Consultoria</a>
     					</div>
     				</div>
     			</div>
