probando vs code

--- a/Spark HTML/contact.html
+++ b/Spark HTML/contact.html
@@ -135,7 +135,7 @@
 						<div class="aboutCell" >
 				            <h1> Contactanos</h1>
 							<div class="aboutTxt">
-								<h3><p> Dudas y consultas contactanos por mail. <br> Estamos a tu disposicion para asesorarte. <br> Tenemos la solucion a tu problema.</p> </h3>
+								<h3><p> Dudas y consultas contactanos por e-mail. <br> Estamos a tu disposicion para asesorarte. <br> Tenemos la solucion a tu problema.</p> </h3>
 							</div>
 						</div>
     				</div>
