--- a/Spark HTML/about.html
+++ b/Spark HTML/about.html
@@ -145,7 +145,7 @@
     			</div>
     		</div>
     	</div>
-    	<div class="aboutImg">
+    	<div class="aboutImg" style="padding: 15px">
     	<!--pOMER IMAGEN DEL GRUPO-->
     		<img src="img/nosotros1.jpg" alt="" width="720px" height="641px">
     	</div>
@@ -154,7 +154,7 @@
     <!-- ======= /2.02 Page About Area ====== -->
 
     <!-- ======= 2.03 Page Service Area ====== -->
-    <div class="aboutServiceArea secPdng">
+    <div class="aboutServiceArea secPdng" style="background-color: black">
     	<div class="container animated">
     		<div class="row">
     			<div class="col-md-12">
