--- a/Spark HTML/index.html
+++ b/Spark HTML/index.html
@@ -94,7 +94,7 @@
 						<div class="aboutCell">
 				            <h2> Conocé al equipo de AIT Solutions</h2>
 							<div class="aboutTxt">
-								<p> En AIT Solutions desarrollamos y diseñamos <br> sistemas para la gestión, formando un equipo <br> común con nuestros clientes, generando herramientas eficientes orientadas a brindar <br> soluciones para cada área de tu empresa.</p>
+								<p> En AIT Solutions desarrollamos y diseñamos <br> sistemas para la gestión, formando un equipo <br> común con nuestros clientes, generando herramientas eficientes <br>orientadas a brindar soluciones para cada área de tu empresa.</p>
 							</div>
 						</div>
     				</div>
