modificacione html servicio

--- a/Spark HTML/servicios.html
+++ b/Spark HTML/servicios.html
@@ -76,18 +76,21 @@
     		<div class="row" style="">
     			<div class="col-md-12">
 					<div class="pageTitle">
-						<div class="h1" style="color: black;font-size: 3em">Servicios</div>
+						<div class="h1" style="color: black;font-size: 3em; border-bottom: 1px solid lightgrey">Servicios <br> <br>
+						</div>
+						
 					</div>
     			</div>
     		</div>
     		<div class="row service">
-                <div class="col-md-12 col-sm-12">
+                <div class="col-md-12 col-sm-12" style="border-bottom: 1px solid lightgrey">
                     <div class="singleService">
-                        <div class="serviceIcon">
-                            <img src="img/icon/ser-07.jpg" alt="">
-                        </div>
                         <div class="serviceContent">
                             <span class="h3">Aplicaciones Moviles</span>
+                            <img src="img/icon/desarrollo-wed.jpg" alt="">
+                            <br>
+                            <br>
+                            <br>
                             <p>Conseguir una experiencia del usuario positiva supone uno de los retos más importantes para Develapps. 
                             Por eso desde aquí contamos con un gran equipo en diseño, UX y UI que toma como 
                             eje principal la optimización de la experiencia del usuario.</p>
@@ -97,12 +100,14 @@
                     </div>
                 </div>
     			<div class="col-md-12 col-sm-12">
-    				<div class="singleService">
-    					<div class="serviceIcon">
-    						<img src="img/icon/soport.png" alt="">
-    					</div>
+    				<div class="singleService" style="border-bottom: 1px solid lightgrey">
+    					
     					<div class="serviceContent">
     						<span class="h3">Soporte Técnico</span>
+    						<img src="img/icon/support.jpg" alt="">
+    						<br>
+                            <br>
+                            <br>
     						<p> Servicio, instalación, configuración, reparación y mantenimiento de todo tipo de notebooks,
     						 tablets, dispositivos y hardware de todas las marcas.</p>
     						 <br>
