modificaciones hml servicio

--- a/Spark HTML/servicios.html
+++ b/Spark HTML/servicios.html
@@ -117,11 +117,13 @@
     			</div>
     			<div class="col-md-12 col-sm-12">
     				<div class="singleService">
-    					<div class="serviceIcon">
-    						<img src="img/icon/gear.png" alt="">
-    					</div>
-    					<div class="serviceContent">
+    					
+    					<div class="serviceContent" style="border-bottom: 1px solid lightgrey">
     						<span class="h3">Desarrollo de Software</span>
+    						<img src="img/icon/desarrollo-soft.jpg" alt="">
+    						<br>
+                            <br>
+                            <br>
     						<p>Construimos aplicaciones corporativas. 
     						La ejecución del proyecto brinda al cliente una solución de software,
     				     mejorando su competitividad.</p>
@@ -132,11 +134,13 @@
     			</div>
                 <div class="col-md-12 col-sm-12">
     				<div class="singleService">
-    					<div class="serviceIcon">
-    						<img src="img/icon/diseno-web.png" alt="">
-    					</div>
-    					<div class="serviceContent">
+    					
+    					<div class="serviceContent" style="border-bottom: 1px solid lightgrey">
     						<span class="h3">Diseño Web</span>
+    					<img src="img/icon/desarrollo-web.jpg" alt="">
+    					<br>
+                            <br>
+                            <br>
     						<p> Un equipo de diseño gráfico/multimedia crea sitios web interactivos
     						 con las últimas tecnologías y adaptación para múltiples dispositivos (desktop, tablets, mobile).</p>
     						 <br>
