--- a/Spark HTML/pag2/nosotros.html
+++ b/Spark HTML/pag2/nosotros.html
@@ -163,7 +163,7 @@
                       </div>
         </div> -->
         
-    </section> -->
+    </section> 
     <section id="inspira " class="section-nosotros2">
       <div class="row align-center ">
         <div class="columns medium-12">
