--- a/Spark HTML/pag2/nosotros.html
+++ b/Spark HTML/pag2/nosotros.html
@@ -35,7 +35,7 @@
                   <li>
                     <a href="#">Ait Solutions</a>
                     <ul class="menu vertical nested">
-                        <li><a href="index.html" class="fi-home"> &nbsp; Home</a></li>
+                        <li><a href="index.html" class="fi-home"> &nbsp;Home</a></li>
                         <li><a href="nosotros.html" class="fi-torso-female"> &nbsp; Nosotros</a></li>
                         <li><a href="servicios.html" class="fi-lightbulb">&nbsp;Servicios</a></li>
                         <li><a href="contacto.html" class="fi-trees">&nbsp;Contacto</a></li>
@@ -306,7 +306,7 @@
         <div class="row">
           <div class="columns small-12 medium-3">
             <p class="center-text white-text">
-              hola
+              hola soy un Footer, segun parece
             </p>
           </div>
         </div>
