--- a/Spark HTML/pag2/nosotros.html
+++ b/Spark HTML/pag2/nosotros.html
@@ -306,7 +306,7 @@
         <div class="row">
           <div class="columns small-12 medium-3">
             <p class="center-text white-text">
-              hola soy un Footer, segun parece :P
+              hola soy un Footer, segun parece :P. aca debe ir algo por lo que veo en otros lados
             </p>
           </div>
         </div>
