--- a/Spark HTML/pag2/nosotros.html
+++ b/Spark HTML/pag2/nosotros.html
@@ -51,7 +51,9 @@
     <section id="nosotros">
         <div class="row white-text">
           <div class="columns small-12">
-            <h1 class="text-center display-1" >Nosotros</h1>
+            <h1 class="text-center display-1" >Nosotros
+              Este framework tiene pinta a ser una ... pense que era mejor 😋
+            </h1>
           </div>
         </div>
         <br>
