--- a/Spark HTML/pag2/index.html
+++ b/Spark HTML/pag2/index.html
@@ -21,7 +21,7 @@
     </header> -->
 
 
-    <header class="header" >
+    <header class="header" id="header">
         <div class="row align-center ">
             <div class=" columns small-6 medium-2 small-offset-1 medium-offset-1 align-self-center large-2">
                 <a href="#" class=""><img src="assets/AIT Logotipo.jpg" alt="" width="100%"></a>
