--- a/Spark HTML/pag2/index.html
+++ b/Spark HTML/pag2/index.html
@@ -58,26 +58,41 @@
     <section id="home">
         <div class="hide-for-small-only">
             <div class="header-content" style="position:absolute;z-index: 3;width: 100%">
+                <div class="row align-self-bottom "" >
+                    <div class=" columns small-7 ait-text"" ><p
+                    class="white-text">
+                    <h1 style="color:blue">Ait Solutions</h1>
+                    </p>
+                    
+                </div>
                 <div class="row align-self-bottom">
-                    <div class="columns small-5">
-                        <p class="white-text">
-                            <h1 style="color:blue">Ait Solutions</h1>
-                            <h3 class="white-text">"Grandes ideas, grandes soluciones"</h3>
+                    <div class="columns small-12 ait-text2"">
+                        <p class=" white-text">
+                        <h3 class="white-text">"Grandes ideas, grandes soluciones"</h3>
                         </p>
                     </div>
                 </div>
             </div>
-            <div style="z-index:2;">
-                <div class="fullscreen-video-wrap">
-                    <!--  https://www.videvo.net/video/typing-on-computer-white-bg/4475/ -->
-                    <!-- DO NOT USE THIS VIDEO, I JUST NEEDED A HOSTED VIDEO FOR THIS CODEPEN> USE THE ONE ABOVE -->
-                    <video src="assets/video-inicio.mp4" autoplay="" loop="">
-                    </video>
-                </div>
-                <div class="header-overlay"></div>
+        </div>
+        <div style="z-index:2;">
+            <div class="fullscreen-video-wrap">
+                <!--  https://www.videvo.net/video/typing-on-computer-white-bg/4475/ -->
+                <!-- DO NOT USE THIS VIDEO, I JUST NEEDED A HOSTED VIDEO FOR THIS CODEPEN> USE THE ONE ABOVE -->
+                <video src="assets/video-inicio.mp4" autoplay="" loop="">
+                </video>
             </div>
+            <div class="header-overlay"></div>
+        </div>
         </div>
 
+    </section>
+
+    <section id="servicios" class="section-servicios">
+        <div class="row align-center">
+            <div class="columns small-12">
+                <p class="text-center">Holas pibaso</p>
+            </div>
+        </div>
     </section>
 
     <section class="section section-a" id="nosotros">
@@ -256,6 +271,9 @@
         </div>
         </div>
     </section>
+
+    
+
 
     <section class="section section-a" id="footer">
         <div class="container">
