--- a/Spark HTML/pag2/index.html
+++ b/Spark HTML/pag2/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>AIT - Solutions</title>
+    <link rel="shortcut icon" href="assets/android-icon-192x192.png" type="image/x-icon">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="icons/foundation-icons/foundation-icons.css">
     <link rel="stylesheet" href="css/app.css">
@@ -24,7 +25,7 @@
     <header class="header" id="header">
         <div class="row align-center ">
             <div class=" columns small-6 medium-2 small-offset-1 medium-offset-1 align-self-center large-2">
-                <a href="#" class=""><img src="assets/AIT Logotipo.jpg" alt="" width="100%"></a>
+                <a href="#" class=""><img src="assets/AIT Logotipo.png" alt="" width="100%"></a>
             </div>
             <div class="show-for-medium columns small-5 medium-7 medium-offset-1 align-self-bottom large-5 large-offset-3"
                 style="background-color:transparent">
@@ -33,7 +34,7 @@
                         <ul class="menu">
                             <li><a href="#home">Home</a></li>
                             <li><a href="#nosotros">Nosotros</a></li>
-                            <li><a href="servicios.html">Servicios</a></li>
+                            <li><a href="#servicios">Servicios</a></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
@@ -59,11 +60,11 @@
         <div class="hide-for-small-only">
             <div class="header-content" style="position:absolute;z-index: 3;width: 100%">
                 <div class="row align-self-bottom "" >
-                    <div class=" columns small-7 ait-text"" ><p
-                    class="white-text">
-                    <h1 style="color:blue">Ait Solutions</h1>
+                    <div class=" columns small-7 ait-text"">
+                    <p class="white-text">
+                        <h1 style="color:blue">Ait Solutions</h1>
                     </p>
-                    
+
                 </div>
                 <div class="row align-self-bottom">
                     <div class="columns small-12 ait-text2"">
@@ -78,7 +79,7 @@
             <div class="fullscreen-video-wrap">
                 <!--  https://www.videvo.net/video/typing-on-computer-white-bg/4475/ -->
                 <!-- DO NOT USE THIS VIDEO, I JUST NEEDED A HOSTED VIDEO FOR THIS CODEPEN> USE THE ONE ABOVE -->
-                <video src="assets/video-inicio.mp4" autoplay="" loop="">
+                <video muted src="assets/video-inicio.mp4" autoplay="" loop="">
                 </video>
             </div>
             <div class="header-overlay"></div>
@@ -90,8 +91,32 @@
     <section id="servicios" class="section-servicios">
         <div class="row align-center">
             <div class="columns small-12">
-                <p class="text-center">Holas pibaso</p>
+                <p class="text-center">SERVICIOS AQUI</p>
+                <p class="text-center">En AIT Solutions desarrollamos y diseñamos sistemas
+                    para la gestión, formando un equipo común con nuestros
+                    clientes, generando herramientas eficientes orientadas a
+                    brindar soluciones para cada área de tu empresa.</p>
             </div>
+        </div>
+        <div class="row">
+            <div class="columns small-10 medium-3">
+                DESARROLLO WEB
+            </div>
+            <div class="columns small-10 medium-3">
+                Diseño Web
+            </div>
+            <div class="columns small-10 medium-3">
+                    Business Intelligence
+            </div>
+            <div class="columns small-10 medium-3">
+                Aplicaciones para todo tipo de plataformas (Android,Iphone)
+            </div>
+            <div class="columns small-10 medium-3">
+                Soporte Técnico
+            </div>
+            <h5>Si no hace lo que le decimos 
+                seguro quiebra, confie en nuestra palabra
+            </h5>
         </div>
     </section>
 
@@ -272,17 +297,22 @@
         </div>
     </section>
 
-    
+
 
 
     <section class="section section-a" id="footer">
         <div class="container">
             <div class="row">
-                <div class="columns small-12 medium-3">
-                    <p class="center-text white-text">
-                        hola soy un Footer, segun parece :P. aca debe ir algo por lo que veo en otros lados
-                    </p>
+                <div class="small-12 columns medium-5 large-2">
+                    <center> <img src="/pag2/assets/AIT Logotipo.png" width="150px" alt="" srcset=""></center>
+                    <p class="text-center">"Grandes ideas, grandes soluciones"</p>
                 </div>
+                <div class="columns small-12 medium-5 large-2">
+                    <h4>Contacto</h4>
+                </div>
+            </div>
+            <div class="row align-center">
+                <p class="text-center">© Copyright 2018 Ait Solutions, All Rights Reserved</p>
             </div>
         </div>
     </section>
