--- a/Spark HTML/pag2/index.html
+++ b/Spark HTML/pag2/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AIT - Solutions</title>
     <link rel="shortcut icon" href="assets/android-icon-192x192.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="icons/foundation-icons/foundation-icons.css">
     <link rel="stylesheet" href="css/app.css">
@@ -89,24 +90,39 @@
     </section>
 
     <section id="servicios" class="section-servicios">
-        <div class="row align-center">
-            <div class="columns small-12">
-                <p class="text-center">SERVICIOS AQUI</p>
-                <p class="text-center">En AIT Solutions desarrollamos y diseñamos sistemas
-                    para la gestión, formando un equipo común con nuestros
-                    clientes, generando herramientas eficientes orientadas a
-                    brindar soluciones para cada área de tu empresa.</p>
+        <div class="pq-elergirnos">
+            <div class="row align-center">
+                <div class="columns smalls-12-medium-3 align-self-middle">
+                    <h2 class="text-center white-text" style="font-family: 'Righteous', cursive;">¿Por qué elegirnos?</h2>
+                </div>
+                <div class="columns small-12 medium-7">
+                    <h5 class="text-center white-text" style="font-family: 'Righteous', cursive;">En AIT Solutions
+                        desarrollamos y diseñamos sistemas
+                        para la gestión, formando un equipo común con nuestros
+                        clientes, generando herramientas eficientes orientadas a
+                        brindar soluciones para cada área de tu empresa.</h5>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="columns small-10 medium-3">
-                DESARROLLO WEB
+            <div class="columns small-10 small-offset-1 medium-4">
+                <div class="serv-di-web">
+                        <center><img src="/pag2/assets/servicios/icon-serv-desweb.png"  alt="" width="150px"
+                            srcset="" class="icon-serv"></center>
+                       <h4 class="serv-text text-center">Desarrollo web</h4>
+                       <p class="text-center serv-text">
+                            Sitios a la medida de cada necesidad, escala y presupuesto. 
+                            Diseño responsive apto para dispositivos móviles. 
+                            Organización de la información y creación del repertorio gráfico. 
+                            Integración con redes sociales.
+                       </p>
+                </div>
             </div>
             <div class="columns small-10 medium-3">
                 Diseño Web
             </div>
-            <div class="columns small-10 medium-3">
-                    Business Intelligence
+            <div class="columns small-10 medium-3" class="serv-di-web">
+                Business Intelligence
             </div>
             <div class="columns small-10 medium-3">
                 Aplicaciones para todo tipo de plataformas (Android,Iphone)
@@ -114,7 +130,7 @@
             <div class="columns small-10 medium-3">
                 Soporte Técnico
             </div>
-            <h5>Si no hace lo que le decimos 
+            <h5>Si no hace lo que le decimos
                 seguro quiebra, confie en nuestra palabra
             </h5>
         </div>
@@ -150,97 +166,99 @@
                     <br>
                 </div>
             </div>
-            <div class="row align-center section-nosotros2 " style="margin-top:2vh">
-                <div class="columns medium-12" style="padding-top:5vh">
-                    <h2 class="text-center white-text">¿QUE NOS APACIONA?</h2>
+            <div class="section-nosotros2">
+                <div class="row align-center  " style="margin-top:2vh">
+                    <div class="columns medium-12" style="padding-top:5vh">
+                        <h2 class="text-center white-text">¿QUE NOS APACIONA?</h2>
+                    </div>
+                    <div class="columns medium-12 show-for-medium" style="margin-top: 40px">
+                        <ul class="tabs align-center" style="display: flex" data-tabs id="example-tabs">
+                            <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">
+                                    <center><i class="fi-heart icon-card"></i></center>
+                                    <h5 class="white-text">Pasíon</h5>
+                                </a></li>
+                            <li class="tabs-title"><a href="#panel2">
+                                    <center><i class="fi-heart icon-card "></i></center></i>
+                                    <h5 class="white-text">Innovacion</h5>
+                                </a></li>
+                            <li class="tabs-title"><a href="#panel3">
+                                    <center><i class="fi-heart icon-card"></i></center>
+                                    <h5 class="white-text">Equipo</h5>
+                                </a></li>
+                            <li class="tabs-title"><a href="#panel4">
+                                    <center><i class="fi-heart icon-card"></i></center>
+                                    <h5 class="white-text">Etica</h5>
+                                </a></li>
+                            <li class="tabs-title"><a href="#panel5">
+                                    <center><i class="fi-heart icon-card"></i></center>
+                                    <h5 class="white-text">Clientes Felices</h5>
+                                </a></li>
+                        </ul>
+                    </div>
+                    <div class="tabs-content" data-tabs-content="example-tabs">
+
+                        <div class="tabs-panel is-active" id="panel1">
+                            <div class="row align-center">
+                                <div class="columns medium-6" style="height: 196px">
+                                    <p class="text-center parraf1">La unica forma de hacer un trabajo
+                                        extraordinario es amnado lo que uno hace. En Ait
+                                        nos apasiona lo que hacemos, y por eso nos superamos día a día.
+                                    </p>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tabs-panel" id="panel2">
+                            <div class="row align-center">
+                                <div class="columns medium-6">
+                                    <p class="text-center parraf1">La satisfacción de nuestros clientes es
+                                        nuestra mayor prioridad. Creemos que estar siempre
+                                        cerca y a disposición cuando nos necesitan es
+                                        la mejor forma de establecer una relación de largo plazo.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tabs-panel" id="panel3">
+                            <div class="row  align-center">
+                                <div class="columns medium-6">
+                                    <p class="text-center parraf1">
+                                        En Ait consideramos que una persona que se siente
+                                        apreciada hará más de lo esperado. Ponemos todo nuestro efuerzo en crear
+                                        un ambiente de trabajo que potencie a nuestro equipo.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tabs-panel" id="panel4">
+                            <div class="row align-center">
+                                <div class="columns medium-6">
+                                    <p class="text-center parraf1">En Ait la exelecia y la competitividad
+                                        no son icompatibles con la honestidad y la integridad.
+                                        Consideramos que la honestidad, la humildad y el respeto van
+                                        de la mano en todas nuestras relaciones.
+                                    </p>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="tabs-panel" id="panel5">
+                            <div class="row align-center">
+                                <div class="columns medium-6">
+                                    <p class="text-center parraf1">La satisfacción de nuestros clientes es
+                                        nuestra mayor prioridad. Creemos que estar siempre
+                                        cerca y a disposición cuando nos necesitan es
+                                        la mejor forma de establecer una relación de largo plazo.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
-                <div class="columns medium-12 show-for-medium" style="margin-top: 40px">
-                    <ul class="tabs align-center" style="display: flex" data-tabs id="example-tabs">
-                        <li class="tabs-title is-active"><a href="#panel1" aria-selected="true">
-                                <center><i class="fi-heart icon-card"></i></center>
-                                <h5 class="white-text">Pasíon</h5>
-                            </a></li>
-                        <li class="tabs-title"><a href="#panel2">
-                                <center><i class="fi-heart icon-card "></i></center></i>
-                                <h5 class="white-text">Innovacion</h5>
-                            </a></li>
-                        <li class="tabs-title"><a href="#panel3">
-                                <center><i class="fi-heart icon-card"></i></center>
-                                <h5 class="white-text">Equipo</h5>
-                            </a></li>
-                        <li class="tabs-title"><a href="#panel4">
-                                <center><i class="fi-heart icon-card"></i></center>
-                                <h5 class="white-text">Etica</h5>
-                            </a></li>
-                        <li class="tabs-title"><a href="#panel5">
-                                <center><i class="fi-heart icon-card"></i></center>
-                                <h5 class="white-text">Clientes Felices</h5>
-                            </a></li>
-                    </ul>
-                </div>
-                <div class="tabs-content" data-tabs-content="example-tabs">
-
-                    <div class="tabs-panel is-active" id="panel1">
-                        <div class="row align-center">
-                            <div class="columns medium-6" style="height: 196px">
-                                <p class="text-center parraf1">La unica forma de hacer un trabajo
-                                    extraordinario es amnado lo que uno hace. En Ait
-                                    nos apasiona lo que hacemos, y por eso nos superamos día a día.
-                                </p>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tabs-panel" id="panel2">
-                        <div class="row align-center">
-                            <div class="columns medium-6">
-                                <p class="text-center parraf1">La satisfacción de nuestros clientes es
-                                    nuestra mayor prioridad. Creemos que estar siempre
-                                    cerca y a disposición cuando nos necesitan es
-                                    la mejor forma de establecer una relación de largo plazo.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tabs-panel" id="panel3">
-                        <div class="row  align-center">
-                            <div class="columns medium-6">
-                                <p class="text-center parraf1">
-                                    En Ait consideramos que una persona que se siente
-                                    apreciada hará más de lo esperado. Ponemos todo nuestro efuerzo en crear
-                                    un ambiente de trabajo que potencie a nuestro equipo.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tabs-panel" id="panel4">
-                        <div class="row align-center">
-                            <div class="columns medium-6">
-                                <p class="text-center parraf1">En Ait la exelecia y la competitividad
-                                    no son icompatibles con la honestidad y la integridad.
-                                    Consideramos que la honestidad, la humildad y el respeto van
-                                    de la mano en todas nuestras relaciones.
-                                </p>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="tabs-panel" id="panel5">
-                        <div class="row align-center">
-                            <div class="columns medium-6">
-                                <p class="text-center parraf1">La satisfacción de nuestros clientes es
-                                    nuestra mayor prioridad. Creemos que estar siempre
-                                    cerca y a disposición cuando nos necesitan es
-                                    la mejor forma de establecer una relación de largo plazo.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
             </div>
             <div class="columns small-12 show-for-small-only">
                 <ul class="accordion" data-responsive-accordion-tabs="accordion medium-tabs large-accordion">
@@ -302,17 +320,14 @@
 
     <section class="section section-a" id="footer">
         <div class="container">
-            <div class="row">
-                <div class="small-12 columns medium-5 large-2">
+            <div class="row align-center">
+                <div class="small-12 columns medium-5 large-4">
                     <center> <img src="/pag2/assets/AIT Logotipo.png" width="150px" alt="" srcset=""></center>
                     <p class="text-center">"Grandes ideas, grandes soluciones"</p>
                 </div>
-                <div class="columns small-12 medium-5 large-2">
-                    <h4>Contacto</h4>
-                </div>
             </div>
             <div class="row align-center">
-                <p class="text-center">© Copyright 2018 Ait Solutions, All Rights Reserved</p>
+                <p class="text-center" style="margin-bottom:0px">© Copyright 2018 Ait Solutions, All Rights Reserved</p>
             </div>
         </div>
     </section>
