--- a/Spark HTML/pag2/index.html
+++ b/Spark HTML/pag2/index.html
@@ -71,6 +71,7 @@
                     <div class="columns small-12 ait-text2"">
                         <p class=" white-text">
                         <h3 class="white-text">"Grandes ideas, grandes soluciones"</h3>
+                        <h3 class="white-text">LOs mjores profesionales a tu lado :O</h3>
                         </p>
                     </div>
                 </div>
